ckanext/ngds/ngdsui/public/css/main.less
/* ... */
#footer {
	height:145px;
	//position:relative;
	background-color:#dadada;
	display:table;
	width:100%;

	.row {
		display:table-row;
	}

	div#footer-links-section {
		text-align:left;
		width:660px;
		height:110px;
		margin-top:5px;
		margin-left:40px;
		padding-left:@lcontent-small-margin;

		div {
			display:inline;
			//position:relative;
			width:160px;
			float:left;

			p {
				font-family:Arial;
				font-weight:bold;
				font-size:12px;
				margin-bottom:0px;
				color:#515151;

			}

			a {
				font-family:Arial;
				font-size:12px;
				color:@extra-light;
				text-decoration:none;
			}

		}

		span {
			display:block;
		}
	} // End of footer-links section

	.footer-link {
		//position:relative;
	}


	.footer-links-feedback-caption-container {
		display:table-cell;
		width:815px;
	}

	div#feedback-section {
		float:left;
		width: 660px;
		
		text-align:left;
		margin-left:@lcontent-margin;
		
		-webkit-border-bottom-right-radius:6px;
		border-bottom-right-radius:6px;
		-webkit-border-bottom-left-radius:6px;
		border-bottom-left-radius:6px;
		display:inline;

		//button {
		//	.ngds-button(100px,20px);
		//	font-family:arial;
		//	font-size:10px;
		//}

		 p {
			font-family:Arial;
			font-size:12px;
			font-style:italic;
			line-height:16px;
			display:inline;
			color:@extra-light;
			margin-left: @lcontent-small-margin;
			margin-top: 0px;
		//	position: relative;
		}

	}

}


div#data-contributors-container {
	width: 320px;
	float: right;
	//position: absolute;
	top: 15px;
	right: 0;
	display:table-cell;
	text-align:left;

	p {
		font-size: 12px;
		font-family: Arial;
		font-weight: bold;
		margin-top: 0px;
		color:#515151;
	}

	span {
		border: 1px solid #DEDEDE;
		width: 50px;
		text-align: center;
		display: block;
		float: left;
		padding-top: 5px;
		padding-bottom: 5px;
		margin-right: 10px;
		margin-bottom: 20px;
		-webkit-border-radius:5px;
		border-radius:5px;

		p {
			font-size: 12px;
			font-family: Arial;
			font-weight:normal;
			margin-top: 0px;
			display: inline;
			text-align: center;
		}
	}
}


/*------------------------------------------------------*/



div.postface {
	//position:relative;
	float:left;
	width:100%;
	height:30px;
	background-color:#cbcbcb;

	 div.left {
		float:left;
		margin-top:5px;
		margin-left:@lcontent-margin;

		p {
			margin-top:0px;
			margin-left:20px;
			font-family:Arial;
			font-size:@font-regular;
			color:@extra-light;
		}
	}

	div.right {
		//position:relative;
		display:table;
		float:right;
		width:320px;
		margin-right:40px;
		color:@light;

		a {
			font-family:Arial;
			font-size:@font-regular;
			text-decoration:none;
			text-align:left;

			&:visited {
				color:@extra-light;
			}
		}

		.center {
			text-align:center;
			padding-left:30px;
		}

		.left {
			text-align:left;
		}

		.right {
			text-align:right;
		}

		span {
			display:inline;
			display:table-cell;
		}
	}
}  // End of postface


.map-search-results {
	width:320px;
	position:absolute;
	top:0px;
	left:10px;
	z-index:4000;

	.results, .pager {
		font-family:Arial;
		font-size:12px;
	}

	.results { 
		position:relative;
		top:78px;
		width:310px;
		background-color:#fff;
		opacity:0.8;
		//box-sizing:border-box;
		//-moz-box-sizing:border-box;
		//-webkit-box-sizing:border-box;
		//border-bottom:20px solid #236393;
		//margin-left:5px;
		overflow:auto;
		height:570px;

		scrollbar-face-color: #000000;
		scrollbar-shadow-color: #2D2C4D;
		scrollbar-highlight-color:#7D7E94;
		scrollbar-3dlight-color: #7D7E94;
		scrollbar-darkshadow-color: #2D2C4D;
		scrollbar-track-color: #7D7E94;
		scrollbar-arrow-color: #C1C1D1;

		.result {
			margin-top:20px;
			z-index:10000;
		
			&:hover {
				cursor:pointer;
			}

			.description {
				font-size:@font-large;
				font-weight:bold;
				text-decoration:none;
				color:#0b3656;
				cursor:pointer;
				margin-left:10px;
				margin-bottom:5px;
			}


			.type, .published {
				display:inline;
				margin-left:20px;
				color:grey;
				font-weight:bold;
			}

			.published {
				color:grey;
			}

			.notes {
				margin-left:20px;
				margin-right:30px;
				font-weight:bold;
				margin-bottom:0px;
				overflow:hidden;
			}
		}

		.result-marker-label {
			position: absolute;
			margin-top: 8px;
			left: 8px;
			color: #fff;
			font-size: 12.5pt;
			font-weight: bold;
		}

		.result-marker { 
			width:25px;
			height:41px;
		}

		.result-marker-container {
			position:relative;
			margin-left:5px;
			display:inline-block;
		}

		div.result-marker-container:hover{
			cursor:pointer;
		}

		.reader { 
			margin-top: 15px;
			font-weight: bold;
			margin-left: 15px;
		}

	}

	.large {
		height:700px;
	}
	
	.full {
		.results;
		height:565px; // Map height - top of results - TODO
		z-index:5000;
	}

	.search-results-pagination {
		display:block;
		position:relative;
		text-align:center;
		background-color:#fff;
		opacity:0.8;
		top:79px;
		width:310px;
		//left:5px;
		margin-top:-1px;

		.search-results-page-nums {
			padding-top:10px;
			a {
				margin-left:5px;
				font-weight:bold;
				color:grey;
				font-size:@font-large;

				&:hover {
					cursor:pointer;
				}
			}

			.page-active {
				color:#236393;
			}
		}

	}

	.map-expander {
		width:310px;
		top:80px;
		//left:5px;
		height:20px;
		background-color:#366D96;
		position:relative;
		cursor:pointer;

	}
	
}

div.about-ngds {
	min-height:450px;
}

div.about-ngds p {
	font-size:13px;
	text-align:justify;
	font-family:Arial;
	line-height:1.5em;
	margin:0px 20px 10px 20px;
}

div.about-ngds p.section-title {
	font-size:20px;
	font-weight:bold;
}
/* ... */

